2011-03-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/config_process.php: Fixed wrong condition when global 
	configuration for "flash_charts" option is override by user value.

2011-03-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/oracle.php: Added new functions for Oracle support.
	include/functions_db.php: Added conditional code for Oracle engine.
	* pandoradb.oracle.sql: Added new db procedure "insert_id" to 
	retrieve PK when insert is performed.

2011-03-31  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pDraw.class.php: Added to 
	library an option to avoid draw zeros in area 
	charts

2011-03-31  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pDraw.class.php: Fixed 
	pchart library bug with default value for
	forcetransparency attribute. Changed from NULL
	to -1

2011-03-31 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/functions_fsgraph.php: add
	to support and wip with new graph engine.

2011-03-31  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Improved 
	legend control and added limitation in showing
	xaxis data to one each 10 pixels

2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Fixed bad 
	legend show condition

2011-03-30 Javier Lanz <javier.lanz@artica.es>
	* godmode/reporting/reporting_builder.item_editor.php: Removed the option
	to select 'show graph' in general reports

2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Added features to 
	the vertical graphs function like colors, alpha values, legend...

2011-03-30 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Fixed a small problem passing 'width'
	parameter in 'top_n' reports

2011-03-30 Javier Lanz <javier.lanz@artica.es>
	* include/functions_reporting.php: Fixed a small problem when displaying