@@ -1,3 +1,15 @@
+2011-03-31 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions_graph.php, operation/agentes/stat_win.php: changes for
+	to show with new engine.
+	 
+	* include/graphs/functions_pchart.php,
+	include/graphs/pChart/pData.class.php,
+	include/graphs/pChart/pDraw.class.php,
+	include/graphs/functions_fsgraph.php,
+	include/graphs/fgraph.php: part of job is Sergio Martin in my laptop, the
+	changes to show borders in the static image graph.
+
 2011-03-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/config_process.php: Fixed wrong condition when global 
